Use interpreter for strategoy to speed up development process

--- a/org.metaborg.lang.tiger.refactoring/metaborg.yaml
+++ b/org.metaborg.lang.tiger.refactoring/metaborg.yaml
@@ -24,7 +24,7 @@ language:
     placeholder:
       prefix: "$"
   stratego:
-    format: jar
+    format: ctree
     args:
     - -la
     - stratego-lib
