Add refactoring slides to the presentation #7
Added .dot files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ org.metaborg.lang.tiger.interpreter/src/main/java/org/metaborg/org/metaborg/lang
 store.core.ds
 .factorypath
 *.refactored.tig
+*.dot
