--- a/org.metaborg.eqclac/pom.xml
+++ b/org.metaborg.eqclac/pom.xml
@@ -4,8 +4,8 @@
   <artifactId>org.metaborg.eqclac</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>EquivalenceClassCalculator</name>
+  <packaging>jar</packaging>
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
