--- a/org.metaborg.lang.tiger.statix/pom.xml
+++ b/org.metaborg.lang.tiger.statix/pom.xml
@@ -60,4 +60,12 @@
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
+  
+  <dependencies>
+ 	<dependency>
+ 		<groupId>org.metaborg</groupId>
+ 		<artifactId>org.metaborg.eqclac</artifactId>
+ 		<version>0.1.0-SNAPSHOT</version>
+ 	</dependency>
+ </dependencies>
 </project>
