--- a/org.metaborg.eqclac/pom.xml
+++ b/org.metaborg.eqclac/pom.xml
@@ -17,4 +17,12 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+      <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.spoofax.core</artifactId>
+      <version>2.6.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
