--- a/org.metaborg.lang.tiger.statix/metaborg.yaml
+++ b/org.metaborg.lang.tiger.statix/metaborg.yaml
@@ -14,6 +14,7 @@ pardonedLanguages:
 - EditorService
 - Stratego-Sugar
 - SDF
+- ds
 debug:
   typesmart: false
 language:
@@ -41,3 +42,9 @@ language:
     - stratego-sdf
     - -la
     - strc
+exports:
+  - language: ATerm
+    directory: src-gen/statix
+  - directory: ./
+    includes:
+      - target/deps/*.jar
