--- a/org.metaborg.lang.tiger.statix/metaborg.yaml
+++ b/org.metaborg.lang.tiger.statix/metaborg.yaml
@@ -29,8 +29,7 @@ language:
     placeholder:
       prefix: "$"
   stratego:
-    format: ctree
-    #format: jar
+    format: jar
     args:
     - -la
     - stratego-lib
