--- a/org.metaborg.lang.tiger.refactoring.test/.project
+++ b/org.metaborg.lang.tiger.refactoring.test/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.metaborg.spoofax.eclipse.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
@@ -13,5 +18,6 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>org.metaborg.spoofax.eclipse.nature</nature>
 	</natures>
 </projectDescription>
